Modification des regles eslint
