# Node_Pokemon/app/routes/log.routes.js
@@ -1,9 +1,6 @@
-
-const { authJwt } = require("../middleware");
-const controller = require("../controllers/log.controller");
+const { authJwt } = require('../middleware');
+const controller = require('../controllers/log.controller');
 
 module.exports = function (app) {
-
-  app.get("/logs", [authJwt.isAdmin], controller.log);
-
+  app.get('/logs', [authJwt.isAdmin], controller.log);
 };
