# Node_Pokemon/app/routes/trade.routes.js
@@ -1,9 +1,7 @@
-const controller = require("../controllers/trade.controller");
+const controller = require('../controllers/trade.controller');
 
 module.exports = function (app) {
+  app.post('/propose-trade', controller.propose_trade);
 
-  app.post("/propose-trade", controller.propose_trade);
-
-  app.post("/accept-reject-trade", controller.accept_reject_trade);
-
+  app.post('/accept-reject-trade', controller.accept_reject_trade);
 };
