# Node_Pokemon/swagger.json
@@ -52,7 +52,6 @@
         "responses": {
           "200": {
             "description": "successful login"
-            
           },
           "400": {
             "description": "Invalid status value"
@@ -266,6 +265,52 @@
         }
       }
     },
+    "/:id/pokemons": {
+      "get": {
+        "tags": ["Trainers"],
+        "summary": "Get all pokemons of a trainer",
+        "description": "",
+        "operationId": "getPokemonsOfTrainer",
+        "produces": ["application/json"],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "description": "ID of trainer to return",
+            "required": true,
+            "type": "integer",
+            "format": "int64"
+          },
+          {
+            "name": "limit",
+            "in": "query",
+            "description": "Number of pokemons to return",
+            "required": false,
+            "type": "integer",
+            "format": "int32"
+          }
+        ],
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "successful operation",
+            "schema": {
+              "type": "array",
+              "items": {
+                "$ref": "#/definitions/Pokemon"
+              }
+            }
+          },
+          "400": {
+            "description": "Invalid status value"
+          }
+        }
+      }
+    },
     "/pokemons": {
       "get": {
         "tags": ["Pokemons"],
@@ -437,6 +482,91 @@
           }
         }
       }
+    },
+
+    "/propose-trade": {
+      "post": {
+        "tags": ["Trades"],
+        "summary": "Propose a trade",
+        "description": "Propose a trade ",
+        "operationId": "proposeTrade",
+        "consumes": ["application/json"],
+        "produces": ["application/json"],
+        "parameters": [
+          {
+            "in": "body",
+            "name": "body",
+            "description": "Trade between two trainers",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/ProposeTrades"
+            }
+          }
+        ],
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "responses": {
+          "405": {
+            "description": "Invalid input"
+          }
+        }
+      }
+    },
+    "/accept-reject-trade": {
+      "post": {
+        "tags": ["Trades"],
+        "summary": "Accept or reject a trade",
+        "description": "Accept or reject a trade ",
+        "operationId": "acceptRejectTrade",
+        "consumes": ["application/json"],
+        "produces": ["application/json"],
+        "parameters": [
+          {
+            "in": "body",
+            "name": "body",
+            "description": "Trade between two trainers",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/AcceptRejectTrades"
+            }
+          }
+        ],
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "responses": {
+          "405": {
+            "description": "Invalid input"
+          }
+        }
+      }
+    },
+    "/logs": {
+      "get": {
+        "tags": ["Logs"],
+        "summary": "Get logs",
+        "description": "Get logs",
+        "operationId": "getLogs",
+        "produces": ["application/json"],
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "successful operation",
+            "schema": {
+              "$ref": "#/definitions/Logs"
+            }
+          }
+        }
+      }
     }
   },
   "definitions": {
@@ -497,6 +627,34 @@
           "type": "string"
         },
         "password": {
+          "type": "string"
+        }
+      }
+    },
+    "ProposeTrades": {
+      "type": "object",
+      "properties": {
+        "trainer1": {
+          "type": "string"
+        },
+        "trainer2": {
+          "type": "string"
+        },
+        "pokemon1": {
+          "type": "string"
+        },
+        "pokemon2": {
+          "type": "string"
+        }
+      }
+    },
+    "AcceptRejectTrades": {
+      "type": "object",
+      "properties": {
+        "tradeId": {
+          "type": "integer"
+        },
+        "status": {
           "type": "string"
         }
       }
